--- a/snake.html
+++ b/snake.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
+
   <h2 class="overlay">Click anywhere to (re)start!</h2>       
   
   <span class="game">
-        <h1>Snake &nbsp</h1>
-      <div class="title cell snake"></div>
-      <div class="title cell snake"></div>
-      <div class="title cell snake" id="tail"></div>
-      <div class="board"></div>
-
+    <h1>Snake &nbsp</h1>
+    <div class="title cell snake"></div>
+    <div class="title cell snake"></div>
+    <div class="title cell snake" id="tail"></div>
+    <div class="board"></div>
   </span>
 
   <span class="directions">
@@ -37,6 +37,8 @@
       Right: D
     </p>
   </span>
+  
+  <a href="https://github.com/vpark/snake-js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://github-camo.global.ssl.fastly.net/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
   
 </body>
 
